# bevy-template

./: .gitignore  AGENTS.md  AI_PROTOCOL.md  Cargo.toml  README.md
crates/app/: Cargo.toml  README.md
crates/app/src/: lib.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: demo.rs  lib.rs  paths.rs
crates/catalog/src/audio/: demo_bgm.rs  mod.rs
crates/catalog/src/characters/: demo_player.rs
crates/catalog/src/dev_preview/: demo_skeleton.rs  mod.rs
crates/catalog/src/props/: demo_rock.rs  mod.rs
crates/catalog/src/world/: demo_ground.rs  demo_sensor_zone.rs  mod.rs
crates/catalog/src/world_2d/: camera.rs  mod.rs
crates/catalog/src/world_3d/: demo_fox.rs  demo_primitives.rs  mod.rs
crates/components/: Cargo.toml  README.md
crates/components/src/: lib.rs
crates/components/src/background/: mod.rs
crates/components/src/base/: README.md  mod.rs
crates/components/src/characters/: README.md  player.rs
crates/components/src/items/: README.md
crates/components/src/resources/: README.md  mod.rs
crates/components/src/ui/: README.md  mod.rs
crates/components/src/world/: README.md
crates/controller/: Cargo.toml  README.md
crates/controller/src/: lib.rs
crates/controller/src/ai/: mod.rs
crates/controller/src/gamepad/: mod.rs
crates/controller/src/keyboard/: mod.rs
crates/controller/src/network/: mod.rs
crates/controller/src/player/: mod.rs
crates/controller/src/script/: mod.rs
crates/dev_preview/: Cargo.toml
crates/dev_preview/src/: main.rs
crates/dev_preview/src/previews/: animation_3d.rs  capabilities.rs  demo_game.rs  demo_menu.rs  mod.rs  primitives_3d.rs  registry.rs  skeletal_animation.rs
crates/external_runtime/: Cargo.toml  README.md
crates/external_runtime/src/: config.rs  gameplay_api.rs  lib.rs
crates/external_runtime/src/ai/: mod.rs
crates/external_runtime/src/bridge/: mod.rs
crates/external_runtime/src/input/: mod.rs
crates/external_runtime/src/local/: keyboard.rs
crates/external_runtime/src/manager/: gameplay.rs  mod.rs  state.rs  transport.rs  user.rs
crates/external_runtime/src/runtime/: mod.rs  task.rs
crates/gameplay/: Cargo.toml  README.md
crates/gameplay/src/: lib.rs
crates/gameplay/src/api/: channel.rs  local_input.rs  manager.rs  mod.rs  plugin.rs  request.rs  submit.rs  systems.rs
crates/gameplay/src/cleanup/: mod.rs  systems.rs
crates/gameplay/src/control/: demo_local_input.rs  demo_sensor.rs  mod.rs
crates/gameplay/src/flow/: mod.rs
crates/gameplay/src/interaction/: mod.rs
crates/gameplay/src/lifecycle/: mod.rs
crates/gameplay/src/rules/: mod.rs
crates/gameplay/src/schedule/: enter.rs  exit.rs  mod.rs  plugin.rs  sets.rs  update.rs
crates/gameplay/src/spawning/: defaults.rs  example.rs  initial.rs  mod.rs  plan.rs  prefab.rs  runtime.rs  systems.rs
crates/gameplay/src/state/: mod.rs  plugin.rs  state_def.rs
crates/helper/: Cargo.toml  README.md
crates/helper/src/: channel.rs  lib.rs
crates/helper/src/assets/: gltf.rs  image.rs  mod.rs  ron.rs  shader.rs  texture.rs
crates/input/: Cargo.toml  README.md
crates/input/src/: lib.rs  local.rs
crates/input/src/bridge/: mod.rs
crates/input/src/device/: mod.rs
crates/input/src/local/: mod.rs
crates/input/src/runtime/: mod.rs  task.rs
crates/intent/: Cargo.toml  README.md
crates/intent/src/: lib.rs
crates/intent/src/movement/: api.rs  mod.rs  plugin.rs
crates/interaction/: Cargo.toml  README.md
crates/interaction/src/: action.rs  lib.rs  message.rs  ui.rs
crates/navigation/: Cargo.toml  README.md
crates/navigation/src/: lib.rs  plugin.rs
crates/navigation/src/agent/: mod.rs  settings.rs
crates/navigation/src/path/: mod.rs  route.rs
crates/navigation/src/query/: mod.rs  straight_line.rs
crates/navigation/src/systems/: follow.rs  mod.rs  refresh.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/network/src/connection/: client.rs  event.rs  mod.rs  state.rs
crates/network/src/handler/: mod.rs  toc.rs
crates/network/src/protocol/: message.rs  mod.rs  payload.rs
crates/network/src/request/: mod.rs  tos.rs
crates/network/src/router/: error.rs  mod.rs  toc.rs
crates/network/src/session/: mod.rs  peer.rs  session_id.rs
crates/network/src/transport/: mod.rs  msrt_udp.rs
crates/peripherals/: Cargo.toml  README.md
crates/peripherals/src/: lib.rs  local_input.rs
crates/peripherals/src/gamepad/: mod.rs
crates/peripherals/src/keyboard/: bindings.rs  mod.rs  routing.rs  systems.rs
crates/peripherals/src/mouse/: mod.rs
crates/peripherals/src/ui/: mod.rs
crates/physics/: Cargo.toml  README.md
crates/physics/src/: body.rs  collider.rs  lib.rs  plugin.rs
crates/physics/src/backend/: avian2d.rs  mod.rs  plugin.rs  rapier2d.rs
crates/physics/src/body/: control.rs  kind.rs  mod.rs
crates/physics/src/collider/: control.rs  filter.rs  mod.rs  shape.rs
crates/physics/src/config/: mod.rs  settings.rs
crates/physics/src/controller/: character.rs  mod.rs
crates/physics/src/events/: collision.rs  contact_force.rs  mod.rs
crates/physics/src/force/: linear.rs  mod.rs
crates/physics/src/joint/: impulse.rs  mod.rs
crates/physics/src/layer/: collision_layer.rs  mod.rs
crates/physics/src/mass/: mod.rs  properties.rs
crates/physics/src/material/: mod.rs  surface.rs
crates/physics/src/motion/: mod.rs  velocity.rs
crates/physics/src/query/: filter.rs  mod.rs  point.rs  raycast.rs  shape.rs
crates/physics/src/sensor/: marker.rs  mod.rs
crates/prefab/: Cargo.toml  README.md
crates/prefab/src/: lib.rs  prefab.rs
crates/prefab/src/characters/: player.rs
crates/prefab/src/control/: api.rs  mod.rs
crates/prefab/src/demo_events/: mod.rs
crates/render_2d/: Cargo.toml  README.md
crates/render_2d/src/: lib.rs  tests.rs
crates/render_3d/: Cargo.toml  README.md
crates/render_3d/src/: lib.rs
crates/scenes/: Cargo.toml
crates/scenes/src/: lib.rs
crates/simulation/: Cargo.toml  README.md
crates/simulation/src/: lib.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: asset_packer.rs  frame_packer.rs  main.rs  tileset_packer.rs
(+635 files in other folders)
