[package]
name = "bevy-template"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Atlas Orein <gamesworldcraft@gamil.com>"]
repository = "https://github.com/atlas-orien/bevy-template"
readme = "README.md"
description = "A Bevy game template."
publish = false

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Atlas Orein <gamesworldcraft@gamil.com>"]
repository = "https://github.com/atlas-orien/bevy-template"

[workspace.dependencies]
bevy = "0.18"
app = { path = "crates/app" }
ecs = { path = "crates/ecs" }
error = { path = "crates/error" }
external_runtime = { path = "crates/external_runtime" }
intent = { path = "crates/intent" }
physics = { path = "crates/physics" }
prefab = { path = "crates/prefab" }
render_2d = { path = "crates/render_2d" }
render_3d = { path = "crates/render_3d" }
gameplay = { path = "crates/gameplay" }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dependencies]
app.workspace = true
external_runtime.workspace = true
gameplay.workspace = true
tokio.workspace = true
