[package]
name = "bevy-template"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Atlas Orein <gamesworldcraft@gamil.com>"]
repository = "https://github.com/atlas-orien/bevy-template"
readme = "README.md"
description = "A Bevy game template."
publish = false

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Atlas Orein <gamesworldcraft@gamil.com>"]
repository = "https://github.com/atlas-orien/bevy-template"

[workspace.dependencies]
# Bevy is the core dependency for the game template, providing the game engine and essential features.
bevy = "0.18"

# internal workspace dependencies.
audio = { path = "crates/audio" }
app = { path = "crates/app" }
cmdproto = { path = "../cmdproto" }
dev_preview = { path = "crates/dev_preview" }
ecs = { path = "crates/ecs" }
error = { path = "crates/error" }
external_runtime = { path = "crates/external_runtime" }
fnroute = { path = "../fnroute" }
helper = { path = "crates/helper" }
interaction = { path = "crates/interaction" }
intent = { path = "crates/intent" }
navigation = { path = "crates/navigation" }
network = { path = "crates/network" }
peripherals = { path = "crates/peripherals" }
physics = { path = "crates/physics" }
prefab = { path = "crates/prefab" }
render_2d = { path = "crates/render_2d" }
render_3d = { path = "crates/render_3d" }
gameplay = { path = "crates/gameplay" }

# Additional dependencies that are not part of the workspace but are essential for the game development process.
thiserror = "2"
msrt-udp = "0.1.0"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toolcraft-config = "0.2.0"

[dependencies]
app.workspace = true
external_runtime.workspace = true
gameplay.workspace = true
helper.workspace = true
tokio.workspace = true
