[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Runnable Bevy application crate."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
intent.workspace = true
physics.workspace = true
render_2d.workspace = true
simulation.workspace = true
