[package]
name = "catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Default resource catalog bindings for prefab instances."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
helper.workspace = true
prefab.workspace = true
render_2d.workspace = true
render_3d.workspace = true
