[package]
name = "components"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared ECS components, bundles, and resources for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
