[package]
name = "controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Input and AI controllers that write control intent."
publish = false

[dependencies]
bevy.workspace = true
components.workspace = true
error.workspace = true
simulation.workspace = true
