[package]
name = "dev_preview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
bevy.workspace = true
catalog.workspace = true
ecs.workspace = true
error.workspace = true
gameplay.workspace = true
interaction.workspace = true
peripherals.workspace = true
prefab.workspace = true
render_2d.workspace = true
