[package]
name = "external_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "External runtime and manager-side adapters for Bevy gameplay."
publish = false

[dependencies]
bevy.workspace = true
device_query = "4.0.1"
error.workspace = true
gameplay.workspace = true
helper.workspace = true
intent.workspace = true
prefab.workspace = true
tokio.workspace = true
