[package]
name = "external_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "External runtime and manager-side adapters for Bevy gameplay."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
gameplay.workspace = true
helper.workspace = true
intent.workspace = true
network.workspace = true
prefab.workspace = true
serde.workspace = true
tokio.workspace = true
toolcraft-config.workspace = true
