[package]
name = "gameplay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gameplay rules and systems for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
