[package]
name = "gameplay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gameplay flow, state scheduling, spawning, and world mutation systems."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
intent.workspace = true
prefab.workspace = true
