[package]
name = "helper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared helper infrastructure for cross-runtime communication."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
ron.workspace = true
serde.workspace = true
