[package]
name = "input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Input source adapters that convert external commands into entity intents."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
intent.workspace = true
simulation.workspace = true
