[package]
name = "input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Input source adapters that convert external commands into intents or gameplay API requests."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
gameplay.workspace = true
intent.workspace = true
prefab.workspace = true
