[package]
name = "intent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Entity intent API for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
prefab.workspace = true
