[package]
name = "interaction"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bevy interaction event bridge for UI and world entities."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
