[package]
name = "navigation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Navigation agents, paths, and path following for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
