[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
cmdproto.workspace = true
error.workspace = true
fnroute.workspace = true
msrt-udp.workspace = true
prost.workspace = true
tokio.workspace = true
