[package]
name = "peripherals"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bevy App internal adapters for local keyboard, mouse, gamepad, and UI peripherals."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
gameplay.workspace = true
interaction.workspace = true
intent.workspace = true
