[package]
name = "physics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Physics engine facade and backend integration for the Bevy game template."
publish = false

[features]
default = []
avian2d = ["dep:avian2d"]
rapier2d = ["dep:bevy_rapier2d"]

[dependencies]
avian2d = { version = "0.6.1", optional = true, default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
    "debug-plugin",
] }
bevy.workspace = true
bevy_rapier2d = { version = "0.34.0", optional = true, default-features = false, features = [
    "dim2",
    "parallel",
    "debug-render-2d",
] }
error.workspace = true
