[package]
name = "physics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Physics engine facade and backend integration for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
bevy_rapier2d = { version = "0.34.0", default-features = false, features = [
    "dim2",
    "parallel",
    "debug-render-2d",
] }
bevy_rapier3d = { version = "0.34.0", default-features = false, features = [
    "dim3",
    "parallel",
    "debug-render-3d",
] }
error.workspace = true
