[package]
name = "prefab"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable entity prefab bundles composed from ECS and physics data."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
physics.workspace = true
