[package]
name = "prefab"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable complete object prefab bundles for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
physics.workspace = true
render_2d.workspace = true
