[package]
name = "render_2d"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "2D rendering and presentation layer for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
error.workspace = true
helper.workspace = true
serde.workspace = true
