[package]
name = "render_3d"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "3D rendering and presentation layer for the Bevy game template."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
