[package]
name = "scenes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Scene assembly layer that links prefabs into playable scenes."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
prefab.workspace = true
