[package]
name = "simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gameplay simulation, state flow, spawning, and world mutation systems."
publish = false

[dependencies]
bevy.workspace = true
ecs.workspace = true
error.workspace = true
