[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal project automation and architecture checks."
publish = false

[dependencies]
error.workspace = true
syn = { version = "2", features = ["full", "visit"] }
