[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal project automation and architecture checks."
publish = false

[dependencies]
error.workspace = true
helper.workspace = true
image = { version = "0.25.10", default-features = false, features = ["png"] }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2", features = ["full", "visit"] }
toml = "0.9.8"
